Fix for images being stretched when viewing on iPhone and in Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,7 +488,7 @@ input {
     }
 
     #mindfulness-content section img {
-        height: 50%;
+        height: auto;
         position: relative;
         padding: 20px;
     }
